fix: footers width on tablet

--- a/src/blocks/footer/_footer.sass
+++ b/src/blocks/footer/_footer.sass
@@ -1,13 +1,18 @@
 footer
-  background-color: #59ace7
   padding-bottom: 30px
+  background-color: #59ace7
+
+  @media (max-width: 1200px)
+    width: 768px
+    margin: auto
 
 .footer
-  width: 100%
+  //width: 100%
   padding-top: 30px
   display: flex
   justify-content: space-between
   color: #ffffff
+  
   
   font-family: "GT Walsheim Pro Regular"
   font-size: 18px
